# croco_ipopt

./: .gitignore  CMakeLists.txt
bindings/: CMakeLists.txt
bindings/python/ipopt_croco/: ipopt-croco.cpp
cmake/: Findipopt.cmake
examples/: CMakeLists.txt
examples/python/: arm_manipulation.py  double_pendulum.py  quadrotor.py  quadrotor_ubound.py  unicycle.py
examples/python/comp_casadi/: tafkeoff_casadi.py
examples/src/: unicycle_raw.hpp
include/: ipopt.hpp  multiple-shooting-nlp.hpp
src/: ipopt.cpp  multiple-shooting-nlp.cpp  unicycle.cpp  unicycle_raw.cpp
